--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,18 @@ canvas:active {
     cursor: grabbing;
 }
 
+.debug {
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    right: 0;
+    text-align: right;
+    
+    color: #000;
+    font-size: 5vh;
+    display: none;
+}
+
 .loader {
 	z-index: 2;
 	position: fixed;
