--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@ body {
     margin: 0;
     
     overflow: hidden;
+    background: #57297a;
+    background-image: url('../images/nature-3195612_960_720.jpg');
+    background-blend-mode: hard-light;
+    background-size: cover;
 }
 
 canvas {    
@@ -76,6 +80,8 @@ canvas:active {
     align-items: center;
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
+    
+    cursor: pointer;
 }
 
 .credits {
@@ -93,8 +99,13 @@ canvas:active {
     color: fuchsia;
 }
 
+.credits a:hover {
+    color: gold;
+}
 
 .footer {
+    opacity: 0.5;
+    
     z-index: 2;
     
     font-size: 5vh;
@@ -105,21 +116,44 @@ canvas:active {
     margin: 0.2em;
     
     position: fixed;
-    bottom: 0;
+    top: 0;
     right: 0;
-    text-align: right;
+    left: 0;
+    text-align: center;
 }
 
 .footer a {
-    text-decoration: none;
-    text-decoration-color: limegreen;
+    vertical-align: middle;
+    padding: 0.5vh;
+    
+    font-family: sans-serif;
+    
+    line-height: 8vh;
+    border: 0.5vh solid #aaa;
+    border-radius: 2vh;
+    background: #ccc;
     color: #000;
-    text-shadow: 0px 0px 0.2em gold;
+    text-shadow: 0.2vh 0.2vh 0.2vh gold;
+    text-decoration: none;
 }
 
+#hamburger-menu {
+    border: 0;
+    background: transparent;
+}
+
+#hamburger-menu img {
+    height: 5vh;
+}
+
+
 .footer a:hover {
-    color: fuchsia;
+    color: gold;
     text-shadow: 0px 0px 0.2em #fff;
+}
+
+.menu-item-hidden {
+    visibility: hidden;
 }
 
 /*#on-off {
